<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SomeAdmin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>

    <string name="user_name">아이디</string>
    <string name="pass_word">비밀번호</string>
    
    <string name="btn_login_text">Login</string>
    <string name="version_app">07.16.2014 - Version 1.3</string>
    
    <string name="text_online">온라인</string>
    <string name="text_inbound">입금확인</string>
    <string name="text_outbound">출금확인</string>
    <string name="text_new_resgister">신규유저</string>
    <string name="text_total_bet">Total Betting</string>
    
    <string name="text_no_info">정보가 없습니다.</string>
    <string name="text_name">이름</string>
    <string name="text_money">금액</string>
    <string name="text_date">Date</string>
    
    <string name="infor">안내</string>
    
    <string name="text_tab_first">Channel 1</string>
    <string name="text_tab_second">Channel 2</string>
</resources>
