<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_login">
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:gravity="center">
	    <EditText 
	        android:id="@+id/txtUserName"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/height_base"
	        android:layout_margin="@dimen/margin_base"
	        android:background="@drawable/edittext_background"
	        android:hint="@string/user_name"
	        android:gravity="center"/>
	    <EditText 
	        android:id="@+id/txtPassword"
	        android:layout_width="match_parent"
	        android:layout_height="@dimen/height_base"
	        android:layout_margin="@dimen/margin_base"
	        android:background="@drawable/edittext_background"
	        android:inputType="textPassword"
	        android:hint="@string/pass_word"
	        android:gravity="center"/>
		<Button 
		    android:id="@+id/btnLogin"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/height_base"
		    android:layout_marginTop="@dimen/margin_base"
		    android:layout_marginLeft="50dp"
		    android:layout_marginRight="50dp"
		    android:background="@drawable/button_background"
		    android:text="@string/btn_login_text"
		    android:textSize="20sp"/>
	</LinearLayout>
	<ProgressBar 
	    android:id="@+id/pbLogin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="gone"/>
</RelativeLayout>
