<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_login">
    <LinearLayout 
        android:id="@+id/llContentBound"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_base">
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="@dimen/height_row"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:textSize="18sp"
	            android:textStyle="bold"
	            android:background="@color/silver"
	            android:text="@string/text_name"/>
	        <View 
	            android:layout_width="1dp"
	            android:layout_height="@dimen/height_row"
	            android:background="@color/gray_of_grey"/>
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="@dimen/height_row"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:textSize="18sp"
	            android:textStyle="bold"
	            android:background="@color/silver"
	            android:text="@string/text_money"/>
	        <View 
	            android:layout_width="1dp"
	            android:layout_height="@dimen/height_row"
	            android:background="@color/gray_of_grey"/>
	        <TextView 
	            android:layout_width="0dp"
	            android:layout_height="@dimen/height_row"
	            android:layout_weight="1"
	            android:gravity="center"
	            android:textSize="18sp"
	            android:textStyle="bold"
	            android:background="@color/silver"
	            android:text="@string/text_date"/>
	    </LinearLayout>
	    <ListView 
	        android:id="@+id/lvBound"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/border_listview"></ListView>
	</LinearLayout>
	<ProgressBar 
	    android:id="@+id/pbBound"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:visibility="gone"/>
	<TextView 
	    android:id="@+id/tvNoinfo"
	    android:layout_centerInParent="true"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/text_no_info"
	    android:visibility="gone"
	    android:textAppearance="?android:attr/textAppearanceLarge" />
</RelativeLayout>
