<RelativeLayout
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/margin_base"
        android:layout_marginRight="@dimen/margin_base"
        android:orientation="vertical">
        <LinearLayout 
            android:id="@+id/llOnline"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_rectangle"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/text_online"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/llInbound"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_rectangle"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/text_inbound"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/llOutbound"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_rectangle"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/text_outbound"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/llNewRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_rectangle"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/text_new_resgister"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/llTotalBet"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_rectangle"
            android:orientation="horizontal">
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/text_total_bet"/>
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow"/>
        </LinearLayout>
    </LinearLayout>
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/version_app"
        android:textSize="15sp"/>
</RelativeLayout>
